# br3k

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yaml
cli/: Cargo.toml
cli/src/: main.rs
dll/: Cargo.toml
dll/src/: lib.rs
lib/: Cargo.toml  build.rs
lib/src/: fs.rs  ipc.rs  kdump.rs  lib.rs  logging.rs  pdb.rs  pe_module.rs  prelude.rs  str.rs  sysapi.rs  sysapi_ctx.rs  unique_resource.rs
lib/src/python/: api_strategy.rs  mod.rs  py_com_irundown.rs  py_fs.rs  py_ipc.rs  py_module.rs  py_pdb.rs  py_pe.rs  py_proc.rs  py_tx.rs
lib/src/shellcode/: generic.rs  lhiuct.rs  mod.rs  ntdll.rs  rop.rs
lib/src/vm/: api_strategy.rs  mod.rs  prelude.rs  py_com_irundown.rs  py_fs.rs  py_ipc.rs  py_module.rs  py_pdb.rs  py_pe.rs  py_proc.rs  py_resource.rs  py_thread.rs  py_tx.rs
lib/windef/: Cargo.toml  build.rs
lib/windef/src/: winbase.rs
lib/windef/src/rpc/: lclor.h  rundown.h
scripts/: execute_rop_gadget_local.py  execute_rundll32.py  inject_com_irundown_docallback.py  inject_create_process_doppel.py  inject_create_process_hollow.py  inject_create_remote_thread.py  inject_hijack_remote_thread.py  inject_queue_apc.py  inject_queue_apc_early_bird.py  ipc_send_script.py  log_handles.py
src/: fs.rs  kdump.rs  main.rs  modules.rs  pe_module.rs  shellcode.rs  sysapi.rs  sysapi_ctx.rs  unique_resource.rs
src/python/: mod.rs  py_com_irundown.rs  py_fs.rs  py_module.rs  py_pdb.rs  py_pe.rs  py_proc.rs  py_tx.rs
src/shellcode/: ldrp_handle_invalid_user_call_target.rs
windef/: Cargo.toml
windef/src/: lib.rs  ntstatus.rs  ntwin.h  rpcwin.h  winbase.rs
