[package]
name = "windef"
edition = "2024"

[dependencies]
libc = "0.2"
winapi = { version = "0.3.9", features = ["rpcdce", "rpcndr"] }
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Kernel",
    "Win32_System_Ioctl",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Performance_HardwareCounterProfiling",
    "Win32_System_SystemServices",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_System_Power",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
]}

[build-dependencies]
rayon = "1.0"
bindgen = "0.72"
regex = "1.11"

[lib]
path = "src/lib.rs"
